<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsFragment"
    android:name="androidx.navigation.fragment.NavHostFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".ui.details.DetailsFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/stat_notify_chat"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/btnBack" />

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imgFood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:srcCompat="@drawable/bg_circle_white"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tvName"
        style="@style/title_food_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ivPhoto"
        app:layout_constraintStart_toStartOf="@+id/ivPhoto"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/FoodTitle" />

    <TextView
        android:id="@+id/tvOrigen"
        style="@style/important_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/Origen"
        app:layout_constraintBottom_toBottomOf="@+id/rbPower"
        app:layout_constraintEnd_toStartOf="@+id/rbPower"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rbPower"
        app:layout_constraintVertical_bias="0.473" />

    <TextView
        android:id="@+id/tvCategoria"
        style="@style/important_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/categorias"
        app:layout_constraintBottom_toBottomOf="@+id/rbIntelligence"
        app:layout_constraintEnd_toStartOf="@+id/rbIntelligence"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rbIntelligence"
        app:layout_constraintVertical_bias="0.473" />

    <TextView
        android:id="@+id/rbPower"
        android:layout_width="285dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:isIndicator="true"
        android:numStars="5"
        android:progressTint="#F80E0E"
        android:rating="4.7"
        android:stepSize="0.5"
        android:text="@string/canada"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPhoto"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/rbIntelligence"
        android:layout_width="285dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:isIndicator="true"
        android:progressTint="#4CAF50"
        android:rating="3"
        android:stepSize="0.5"
        android:text="@string/vegano"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/rbPower"
        app:layout_constraintTop_toBottomOf="@+id/rbPower"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/back"
        android:textColor="#424242"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        tools:ignore="NotSibling" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="386dp"
        android:layout_height="309dp"
        android:layout_marginTop="16dp"
        android:background="#CDC9A6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbIntelligence"
        app:layout_constraintVertical_bias="0.007"
        tools:ignore="NotSibling">

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="16dp"
            android:text="@string/descripcion"
            android:textSize="20sp" />

    </ScrollView>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/loading_gif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/loading_gif"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>